@@ -87,6 +87,16 @@ class IResponseFactory(Interface):
         should accept all the arguments that the webob.Response class
         accepts)"""
 
+class IRequestFactory(Interface):
+    """ A utility which generates a request """
+    def __call__(environ):
+        """ Return an object implementing IRequest, e.g. an instance
+        of ``repoze.bfg.request.Request``"""
+
+    def blank(path):
+        """ Return an empty request object (see
+        ``webob.Request.blank``)"""
+
 class IViewClassifier(Interface):
     """ *Internal only* marker interface for views."""
 
